| Bug #25239 | Out of memory problem can cause crash in SUMA | ||
|---|---|---|---|
| Submitted: | 22 Dec 2006 9:11 | Modified: | 8 Feb 2007 5:36 |
| Reporter: | Kris Buytaert (Candidate Quality Contributor) | Email Updates: | |
| Status: | Closed | ||
| Category: | Server: Cluster | Severity: | S3 (Non-critical) |
| Version: | 5.1.12 | OS: | Linux (Centos 4.2) |
| Assigned to: | Tomas Ulin | Target Version: | |
| Tags: | suma crash ndbd | ||
[22 Dec 2006 9:11]
Kris Buytaert
[22 Dec 2006 9:12]
Kris Buytaert
Trace of an ndbd crash
Attachment: ndb_4_trace.log.1.gz (application/x-gzip, text), 43.34 KiB.
[22 Dec 2006 14:39]
Valeriy Kravchuk
Thank you for a problem report. Please, try to repeat with a newer version, 5.1.14, and inform about the results.
[23 Jan 2007 0:00]
Bugs System
No feedback was provided for this bug for over a month, so it is being suspended automatically. If you are able to provide the information that was originally requested, please do so and change the status of the bug back to "Open".
[29 Jan 2007 6:30]
Tomas Ulin
This should work, RNIL on seize_page is handeled. Propose also to call out_of_buffer_release() right away on failed seize_page() to avoid not needed signalling on out of memory... ===== storage/ndb/src/kernel/blocks/suma/Suma.cpp 1.53 vs edited ===== 4671,4673c4671 < signal->theData[0] = SumaContinueB::OUT_OF_BUFFER_RELEASE; < signal->theData[1] = 0; < sendSignal(SUMA_REF, GSN_CONTINUEB, signal, 2, JBB); --- > out_of_buffer_release(signal, 0); 4741c4739,4740 < ndbrequire(count > 0); --- > if (count == 0) > return RNIL;
[31 Jan 2007 6:07]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/19062
[7 Feb 2007 16:50]
Tomas Ulin
pushed to 5.1.16
[8 Feb 2007 5:36]
Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of that product and will be incorporated into the next release.
If necessary, you can access the source repository and build the latest available version, including the bug fix. More information about accessing the source trees is available at
http://dev.mysql.com/doc/en/installing-source.html
Documented bugfix in 5.1.16 changelog.
[27 Feb 2007 6:23]
Jon Stephens
Documented bugfix in telco-6.1.3 changelog.
[5 Mar 2007 14:01]
Bugs System
A patch for this bug has been committed. After review, it may be pushed to the relevant source trees for release in the next version. You can access the patch from: http://lists.mysql.com/commits/21149 ChangeSet@1.2102, 2007-03-05 15:01:17+01:00, jonas@perch.ndb.mysql.com +1 -0 ndb - wl2325-5.0 Bug #25239 Out of memory problem can cause crash in SUMA
