 Bug#25239	Out of memory problem can cause crash in SUMA (recommit in 6.1.3 telco clone)